Fix this week/next week and dates

--- a/src/templates/weekly.html
+++ b/src/templates/weekly.html
@@ -39,7 +39,6 @@
             </ul>
             <br>
         </li>
-
         <li>Test Cloud Security improvements roadmap
           <table>
             <tr>
@@ -54,6 +53,7 @@
               <td><a href="https://msmobilecenter.visualstudio.com/Test/_workitems?id=3732&_a=edit&fullScreen=true">VSTS Story</a></td>
             </tr>
           </table>
+        </li>
       </ul>
       <ul id="key-objectives-vsts">
         <li><i>Auto Provisioning MVP (without secrets storage):</i><table><tr><td>Target Date</td><td><b>August 3rd</b></td></tr><tr><td>Confidence</td><td><b>Medium</b></td></tr></table><p>Reduce uncertainty by:</p><ul><li>bla bla bla</li></ul><p><a href=\"https://msmobilecenter.visualstudio.com/Project-100/_workitems?id=7417&amp;_a=edit&amp;fullScreen=true\"></a></p><br /></li>
@@ -62,29 +62,27 @@
 
     <p><b>Telemetry:</b> [PMs to report]
 
-    <p><b>
-        Risks & Notices</b><br>
+    <p><b>Risks & Notices</b><br>
       <ol>
-        <li>
-          Windows support: Given past history of the windows automation team, we have low confidence in the quality of the bits provided by the team. We have included this in our "Plan for a plan", but this item will likely remain as a risk to windows support "this year".
+        <li> Windows support: Given past history of the windows automation team, we have low confidence in the quality of the bits provided by the team. We have included this in our "Plan for a plan", but this item will likely remain as a risk to windows support "this year".</li>
       </ol>
-    <p><b>Last week (~5 select items)</b>
-      <ol>
-        <li>X
-        <li>X
-        <li>X
-        <li>X
-        <li>X
-      </ol>
-    <p><b>This week (~5 select items)</b>
-      <ol>
-        <li>X
-        <li>X
-        <li>X
-        <li>X
-        <li>X
-      </ol>
-
-
+    <section id="weekly-progress">
+      <p><b>Last week (~5 select items)</b>
+        <ol id="last-week">
+          <li>X</li>
+          <li>X</li>
+          <li>X</li>
+          <li>X</li>
+          <li>X</li>
+        </ol>
+      <p><b>This week (~5 select items)</b>
+        <ol id="this-week">
+          <li>X</li>
+          <li>X</li>
+          <li>X</li>
+          <li>X</li>
+          <li>X</li>
+        </ol>
+    </section>
   </body>
 </html>
