Support weekly items

--- a/src/templates/weekly.html
+++ b/src/templates/weekly.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>not used</title>
+    <title>Remember to sanity check and edit</title>
   </head>
   <body>
     <b>To:</b> <span id="to">Test Cloud PM Team &lt;test-cloud-pm@microsoft.com&gt;; Simina Pasat &lt;siminap@microsoft.com&gt;; Villars Gimm &lt;vigimm@microsoft.com&gt;; Karl Piteira &lt;kapiteir@microsoft.com&gt;</span><br>
     <b>cc:</b> <span id="cc">Jakub Oleksy &lt;jakubo@exchange.microsoft.com&gt;; Test Cloud All &lt;test-cloud-all@microsoft.com&gt;; Mobile Center - Commerce Team &lt;mobile-center-commer@microsoft.com&gt;; Mobile Center - Auto Provisioning Team &lt;mobile-center-autopr@microsoft.com&gt;</span><br>
-    <b>Title: </b><span id="title">Eng. status June 5th, 2017: Auto Provisioning, Azure Billing, Test Cloud</span>
+    <b>Title: </b>Eng. status <span id="title-date">2017-06-05</span>: Auto Provisioning, Azure Billing, Test Cloud
     <h3>Engineering status</h3>
     <p>This provides a raw draft status which is used as input for the weekly status sent by PMs.<br>
       Justin send status for: Test Cloud<br>
@@ -77,11 +77,23 @@
         </ol>
       <p><b>This week (~5 select items)</b>
         <ol id="this-week">
-          <li>X</li>
-          <li>X</li>
-          <li>X</li>
-          <li>X</li>
-          <li>X</li>
+          <li>
+            <a href="https://msmobilecenter.visualstudio.com/Project-100/Auto-Provisioning/_workitems?id=7417&fullScreen=true&_a=edit">Auto Provisioning MVP: backend for sun-shine auto-provisioning with transient storage</a> [Chris, Aaron, Ramon]
+          </li>
+          <li>
+            <a href="https://msmobilecenter.visualstudio.com/Project-100/_workitems?id=4081&_a=edit&fullScreen=true">Research & document scenarios that use apple secrets</a> [Søren]
+          </li>
+          <li><a href="https://msmobilecenter.visualstudio.com/Project-100/_workitems?id=6865&_a=edit&fullScreen=true">Billing service REST API</a> – SPIKE to get API deployed in INT: fake data [Bjørn, Tomasz]</li>
+          <li>Billing service: Software infrastructure stand-up (<a href="https://msmobilecenter.visualstudio.com/Project-100/Azure-Billing/_workitems?id=6864&fullScreen=true&_a=edit">CosmosDB</a>,
+            <a href="https://msmobilecenter.visualstudio.com/Project-100/Azure-Billing/_workitems?id=6866&fullScreen=true&_a=edit">Worker role</a>) [Jon, Tomasz]</li>
+          <li>Live-site post-mort action items [Kasper, Ole, Christof, Søren]
+            <ul>
+              <li><a href="https://microsoft.sharepoint.com/teams/mobiledevops70/_layouts/OneNote.aspx?id=%2Fteams%2Fmobiledevops70%2FSiteAssets%2FMobile%20Dev%20Ops%20Notebook&wd=target%28Engineering%2FLiveSite%2FIncidents.one%7C81492FA7-B4EC-4E9B-ABFD-95085C239C1B%2F17-05-30%20%5BICM%3A%2038579535%5D%20Test%20cloud%20status%20endpoints%7CE2D924BE-7419-494C-BFD2-6919D2E3836E%2F%29">17-05-30 [ICM: 38579535] Test cloud status endpoints are unavailable </a>
+              </li>
+              <li><a href="https://microsoft.sharepoint.com/teams/mobiledevops70/_layouts/OneNote.aspx?id=%2Fteams%2Fmobiledevops70%2FSiteAssets%2FMobile%20Dev%20Ops%20Notebook&wd=target%28Engineering%2FLiveSite%2FIncidents.one%7C81492FA7-B4EC-4E9B-ABFD-95085C239C1B%2F17-06-02%20%5BICM%3A%2038846639%5D%20Some%20Mobile%20Center%20tests%7C3085983C-C38A-43A0-B219-005F2692971F%2F%29">17-06-02 [ICM: 38846639] Some Mobile Center tests not started successfully</a></li>
+          </li>
+
+          <li><a href="https://msmobilecenter.visualstudio.com/Test/_workitems?id=6604&_a=edit&fullScreen=true">Support sales to Audi Lighthouse: codesign issue for MyAudi</a> [Simon]</li>
         </ol>
     </section>
   </body>
